tests/errors/sem.type-mismatch.branches.or
main :: () -> void {
    x := false;
    y := if x then {
        1;
    } else {
        false;
    };

    y;
};
